try to put analytics

--- a/tpl_compiled/themes-feh-templates-index.html
+++ b/tpl_compiled/themes-feh-templates-index.html
@@ -104,10 +104,20 @@ if ($use_sts && isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] != 'off') {
 	</style>  
 
 <link href="/themes/feh/css/bootstrap1.css" rel="stylesheet"> 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G9JD9QGM1W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag()
+  gtag('js', new Date());
+
+  gtag('config', 'G-G9JD9QGM1W');
+</script>
 </head>
 
 <body>
-<div id="box">
+
+	<div id="box">
 	<header>
 			
 <!--  =====================================================================	-->
