--- a/tpl_compiled/apps-accueil-front-templates-accueil.html
+++ b/tpl_compiled/apps-accueil-front-templates-accueil.html
@@ -1,4 +1,5 @@
 <script src="/apps/accueil/front/js/window_height.js" type="text/javascript"></script>
+<?php include_once("analyticstracking.php") ?>
 <!--  =====================================================================	-->
 <!-- 		SLIDER	 														-->													 
 <!--  =====================================================================	-->
