--- a/tpl_compiled/apps-accueil-front-templates-accueil.html
+++ b/tpl_compiled/apps-accueil-front-templates-accueil.html
@@ -1,5 +1,13 @@
 <script src="/apps/accueil/front/js/window_height.js" type="text/javascript"></script>
-<?php include_once("analyticstracking.php") ?>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G9JD9QGM1W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag()
+  gtag('js', new Date());
+
+  gtag('config', 'G-G9JD9QGM1W');
+</script>
 <!--  =====================================================================	-->
 <!-- 		SLIDER	 														-->													 
 <!--  =====================================================================	-->
