themes css clean v1

--- a/tpl_compiled/apps-gestionnewsletter-front-templates-gestionNewsletter.html
+++ b/tpl_compiled/apps-gestionnewsletter-front-templates-gestionNewsletter.html
@@ -9,7 +9,7 @@
       <div class="col-xs-12 col-sm-6 col-lg-2"></div>
       <div class="col-xs-12 col-sm-12 col-lg-6 animation-element right">
         <p class="lead text-justify">
-          BBLa newsletter du Forum Est Horizon, c'est l'assurance de ne rater
+          La newsletter du Forum Est Horizon, c'est l'assurance de ne rater
           aucune information.
         </p>
       </div>
