Session site entreprise variable set

--- a/tpl_compiled/apps-inscription-cv-front-templates-inscription.html
+++ b/tpl_compiled/apps-inscription-cv-front-templates-inscription.html
@@ -19,6 +19,9 @@
 						les profils les mieux
 						adaptés à sa demande actuelle.</p>
 					<p align="center">Pour profiter de tous ces services merci de remplir le formulaire ci-dessous.</p>
+
+					<?php echo $_SESSION["site entreprise"]?>
+
 					<?php if (True): ?>
 				</div>
 				<br /><br />
