--- a/tpl_compiled/apps-accueil-front-templates-accueil.html
+++ b/tpl_compiled/apps-accueil-front-templates-accueil.html
@@ -157,7 +157,14 @@
 					prestigieuses et viennent de tous les secteurs: énergie, conseil, BTP, banques, etc. De même, les
 					étudiants viennent de
 					toutes les filières: ingénierie, commerce, management…
-				</p>
+				<p>
+					<div class="spoiler"><br>
+						<input onclick="showSpoiler(this);" value="Dérouler"
+						 type="button">
+						<div class="inner" style="display: none;"><a>will it display sth or na</a>
+						</div>
+						</div>
+				</p>		
 				<h3>Historique du Forum Est-Horizon ces dernières années:</h3>
 				<h4 class="lead text-justify">2014 : édition présidée par Vincent Laurent</h4>
 				<p class="lead text-justify">Après une édition dans la galerie des Mines de Nancy, l’équipe de Vincent a
