--- a/tpl_compiled/apps-programme-front-templates-espace_etudiants.html
+++ b/tpl_compiled/apps-programme-front-templates-espace_etudiants.html
@@ -279,7 +279,7 @@
     <div class="row featurette">
       <div class="col-xs-12 col-sm-12 col-lg-12">
         <h2 class="featurette-heading">
-          <span class="text-muted"> Concours de projets</span>
+          Concours de projets<span class="text-muted"> </span>
         </h2>
       </div>
       <div class="col-md-7">
@@ -336,7 +336,7 @@
           </p>
         </div>
         <div class="col-xs-12 col-sm-12 col-lg-2 center-block animation-element left">
-          <a style="display: inline-block" href="https://www.est-horizon.com/concoursprojets#presentation">
+          <a style="display: inline-block" href="/concoursprojets#presentation">
             <button id="down" class="btn btn-lg btn-secondary btn-block">
               Modalités d'inscription
             </button>
